<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_restaurants"
        android:title="@string/restaurants" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/orders" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/contactFragment"
        android:icon="@drawable/ic_contact"
        android:title="@string/contact" />

</menu>